--- a/website/economics/model.qmd
+++ b/website/economics/model.qmd
@@ -1,118 +1,97 @@
-# RØMER's Economic Model: Understanding the First True Market-Driven Blockchain Economy
+# RØMER Chain: A Market-Driven Economic Model
 
-## Introduction to Core Economic Principles
+RØMER Chain introduces an economic model built specifically for professional market making. By anchoring our token economics to actual trading volume rather than computational metrics or staked tokens, we create an environment where network value directly reflects market making activity and trading demand.
 
-RØMER Chain introduces an Austrian inspired economic model built on three foundational principles that work together to create a truly market-driven blockchain economy. By understanding how these principles interact, we can appreciate how RØMER achieves both stability and efficiency in ways traditional blockchain networks cannot.
+## Core Economic Principles
 
-### Computation as the Product
+Our economic model rests on three foundational principles that work together to create a sustainable market making ecosystem.
 
-At the heart of RØMER's design is the recognition that computation itself is the fundamental product being traded. Unlike networks that treat computation as a secondary consideration, RØMER explicitly bases its entire economic model on computational capacity. This begins with our base threshold, calibrated at 50% of the network's total computational capacity.
+### Trading Volume as the Core Metric
 
-This threshold serves as the network's natural equilibrium point, creating a clear and predictable pricing structure for computational resources. When users purchase computation on RØMER, they know exactly what they're getting and what it will cost, enabling reliable business planning and efficient resource allocation. This predictability stems from our fixed per-operation pricing model, which maintains stable costs regardless of network conditions.
+At the heart of RØMER's design is the recognition that trading volume represents the fundamental measure of network utility. Unlike networks that focus on computational capacity or staked tokens, RØMER explicitly bases its entire economic model on actual trading activity. This begins with our baseline volume threshold, which serves as the network's natural equilibrium point.
 
-### Austrian Economic Alignment
+When volumes fall below this baseline, automatic token burning creates natural support for network value. When volumes exceed the baseline, controlled token minting allows the network to grow sustainably. This creates a direct link between network usage and token economics, ensuring that token value reflects genuine trading demand rather than speculative activity.
 
-RØMER's economic design draws heavily from Austrian economic principles, particularly in how it approaches value discovery and market dynamics. Instead of imposing artificial constraints or centrally planned parameters, RØMER allows the market to determine value through actual usage patterns and participant behavior.
+### Performance-Based Validation
 
-This alignment manifests in several ways. First, price discovery happens naturally through the interaction of supply and demand, with no artificial floors or ceilings. Second, the system avoids creating artificial scarcity, instead letting real resource constraints and market demand drive token economics. Perhaps most importantly, RØMER enables true economic calculation by providing clear, stable pricing signals that market participants can use to make informed decisions.
+Rather than requiring validators to stake tokens, RØMER qualifies validators based on their actual contribution to network health. Market makers maintain their validator status by consistently meeting two critical criteria:
 
-### Stable Operational Costs
+First, they must maintain exceptional network performance, measured through metrics like latency, uptime, and geographic presence. Second, they must contribute meaningfully to trading volume in their region. This dual requirement ensures that validator slots go to market makers who actively improve network quality rather than those who simply hold tokens.
 
-The third principle addresses one of the most significant challenges in blockchain networks: cost predictability. RØMER implements fixed operation pricing, which means that the cost of any given computation remains constant in nominal terms. This stability creates several important advantages for network participants.
+### Regional Market Protection
 
-Businesses can create reliable budgets for their blockchain operations, knowing that their costs won't suddenly spike due to network congestion or speculative activity. The long-term planning horizon this enables is crucial for enterprise adoption, as organizations need to forecast their operational costs accurately. This predictability also encourages more efficient resource utilization, as users can optimize their operations around known, stable costs.
+The third principle addresses one of the most significant challenges in market making: protecting regional advantages. RØMER's geographic validation system creates natural regional markets where qualified market makers can build sustainable operations. This geographic distribution also ensures true decentralization while creating multiple centers of price discovery.
 
-## The Base Computation Threshold
+## The Baseline Volume Threshold
 
-The 50% base computation threshold represents one of RØMER's most innovative economic mechanisms. This threshold creates a clear reference point for network operations while ensuring the system maintains sufficient capacity for demand spikes.
+The baseline volume threshold represents RØMER's most innovative economic mechanism. This threshold creates a reference point for network activity while ensuring the system maintains sustainable growth.
 
-### Capacity-Based Threshold Mechanics
+### Volume-Based Economics
 
-Setting the base threshold at 50% of validator capacity creates a natural operating equilibrium that serves multiple purposes. First, it ensures the network always maintains substantial headroom for demand spikes, preventing the congestion issues that plague many blockchain networks. Second, it creates clear incentives for resource optimization, as operators can maximize their efficiency by targeting this known threshold.
+The baseline threshold is calculated as a moving average of trading volume across all regions. This creates several important economic effects:
 
-The threshold also scales naturally with network growth, as computing power increases through hardware upgrades and network expansion. This creates a sustainable growth model where capacity can increase to meet demand while maintaining economic stability.
+First, it provides a clear measure of network health that participants can monitor. Second, it creates predictable supply dynamics based on actual usage. Third, it allows the network to scale naturally as trading activity grows, without requiring artificial adjustments to economic parameters.
 
-### Economic Safeguards
+### Dynamic Supply Adjustment
 
-The threshold mechanism incorporates several economic safeguards to ensure network stability. Validator cost tracking provides real-time feedback about the economic sustainability of network operations. Anti-manipulation design features prevent gaming of the threshold mechanism, while hardware upgrade incentives ensure the network can scale to meet growing demand.
+When trading volume deviates from the baseline threshold, the system automatically adjusts token supply:
 
-These safeguards focus particularly on network security, ensuring that the economic model supports rather than undermines the network's security properties. This creates a virtuous cycle where economic stability reinforces network security, which in turn supports stable economics.
+During periods of reduced trading, the system burns tokens proportionally to the decrease in volume. This creates buying pressure during market downturns and helps maintain network value when activity temporarily decreases.
 
-## Supply Dynamics
-
-RØMER's supply dynamics respond directly to network utilization, creating a natural feedback loop between usage and token supply. This mechanism operates differently depending on whether network usage is above or below the base threshold.
-
-### Above Base Threshold Operations
-
-When network usage exceeds 50% of capacity, several mechanisms activate to maintain stability. New RØMER tokens are minted in proportion to the excess usage, creating natural supply expansion that helps maintain stable computation costs. The market price adjusts to reflect this increased supply, while resource optimization incentives become stronger to encourage efficient usage of the network's capacity.
-
-### Below Base Threshold Operations
-
-During periods of lower network usage (below 50% capacity), the system automatically burns RØMER tokens. This supply contraction helps maintain token value during periods of reduced demand. The burning mechanism creates stronger efficiency incentives, encouraging users to optimize their resource usage while ensuring the network remains economically sustainable even during lower utilization periods.
+During high-volume periods, controlled token minting allows the supply to expand with genuine network growth. This ensures the network can scale while maintaining economic stability.
 
 ## Market Participant Behavior
 
-The economic model creates distinct incentives and opportunities for different types of market participants, each playing an important role in maintaining network stability.
+The economic model creates distinct incentives for different types of market participants.
 
-### Rational Traders
+### Market Makers
+Market makers focus on maintaining their validator status through consistent performance and volume contribution. The geographic validation system protects their regional advantages, while the volume-based economics ensure that successful market making directly contributes to network value.
 
-Traders in the RØMER ecosystem focus on capacity utilization as their primary market signal. By monitoring the network's position relative to the 50% threshold, they can identify trading opportunities while supporting system stability. Their trading activities help maintain price equilibrium and provide important market liquidity.
+### Traders
+For traders, the model provides clear signals about market depth and activity. Regions with strong market maker performance naturally attract more trading volume, creating a virtuous cycle of liquidity and activity.
 
 ### Network Users
+Users benefit from the stability created by having professional market makers as validators. The geographic distribution ensures reliable access to liquidity across different regions, while the performance requirements maintain high network quality.
 
-For users of the network, the economic model provides clear signals for optimizing their operations. The stable pricing allows for effective resource planning, while the capacity threshold creates natural incentives for efficient usage patterns. Users can time their operations to take advantage of lower utilization periods, leading to more efficient overall network usage.
+## Market Cycle Resilience
 
-### Validators
-
-Validators play a crucial role in maintaining network capacity and security. The economic model encourages them to maintain optimal capacity while providing predictable economics for their operations. Geographic distribution adds another dimension to validator strategy, as different locations may offer varying advantages for network participation.
-
-## Crypto Market Cycles
-
-One of RØMER's most innovative features is its ability to maintain stability across different market conditions, particularly during the extreme swings common in cryptocurrency markets.
+RØMER's volume-based economics create natural resilience across market cycles.
 
 ### Bull Market Dynamics
+During bull markets, increased trading volume leads to controlled supply expansion. This allows the network to grow naturally with demand while maintaining economic stability. The performance requirements ensure that this growth doesn't come at the cost of network quality.
 
-During bull markets, when network usage typically exceeds 50% capacity, the system responds with controlled supply expansion. This helps maintain stable computation costs while encouraging hardware upgrades to meet increased demand. The model creates natural resistances to speculative excess while ensuring the network can scale to meet genuine usage growth.
+### Bear Market Protection
+In bear markets, the automatic supply contraction helps maintain network value even as trading volumes decrease. This creates a counter-cyclical effect that helps sustain market maker economics during downturns, ensuring consistent network operation across market conditions.
 
-### Bear Market Resilience
+## Implementation Details
 
-In bear markets, when usage often falls below 50% capacity, the system's automatic supply contraction helps maintain economic stability. The excess capacity available during these periods enables highly efficient operations, while the supply contraction provides natural price support. This creates a counter-cyclical stability mechanism that helps the network thrive even during market downturns.
+The practical implementation focuses on several key metrics:
 
-## Implementation and Technical Details
+### Network Performance Metrics
 
-The practical implementation of RØMER's economic model requires careful attention to technical details and system parameters.
+- Latency: Must maintain consistent low latency to regional users
+- Uptime: Required to maintain high availability
+- Geographic Presence: Must demonstrate physical presence in region
+- Path Optimization: Must maintain efficient network routes
 
-### Utilization Calculation Example
+### Volume Requirements
 
-Here's how the system calculates and responds to network utilization:
+- Minimum Regional Contribution: Must consistently provide significant liquidity
+- Market Quality Metrics: Spread maintenance and depth requirements
+- Activity Consistency: Regular participation in market making
 
-```python
-def calc_utilization():
-    total_capacity = get_validator_capacity()
-    current_usage = measure_network_load()
-    utilization = current_usage / total_capacity
+### Qualification Process
+New validators must:
 
-    # Compare to 50% threshold
-    if utilization > 0.5:
-        return (utilization - 0.5) * 100
-    else:
-        return (0.5 - utilization) * 100
-```
-
-This calculation provides the basic input for the system's supply adjustment mechanisms. When utilization exceeds 50%, the positive return value triggers token minting. When it falls below 50%, the negative return value triggers token burning.
-
-### Market Launch Configuration
-
-Initial network parameters are carefully calibrated to ensure stability from launch:
-
-The validator configuration begins with hardware requirements sized for 200% of expected launch demand, providing substantial growth headroom while maintaining the 50% base threshold. This conservative initial sizing helps ensure network stability during the critical early period.
-
-Economic parameters, including initial token supply and burn rates, are calibrated based on expected utilization patterns. The system includes reserves sized for extended periods of underutilization, ensuring it can maintain stability even during prolonged market downturns.
+1. Demonstrate technical capabilities
+2. Prove geographic presence
+3. Meet initial volume requirements
+4. Maintain consistent performance
 
 ## Conclusion
 
-RØMER Chain's economic model represents a fundamental advance in blockchain economics. By anchoring the system to physical computational capacity and implementing Austrian economic principles, we create a naturally stable and efficient market for blockchain computation.
+RØMER Chain's economic model represents a fundamental advance in blockchain market making infrastructure. By anchoring the system to actual trading volume and combining this with performance-based validation, we create an environment where network value directly reflects genuine market making activity.
 
-The combination of fixed computational costs, capacity-based supply adjustment, and geographic distribution creates an environment where market forces drive sustainable growth and optimization. This approach provides the predictability that businesses require while maintaining the economic incentives necessary for long-term network sustainability.
+The combination of volume-based economics, performance requirements, and geographic protection creates sustainable economics for professional market makers. This approach provides the stability that market makers require while maintaining the incentives necessary for long-term network growth.
 
-Through its focus on real physical capacity and market-driven growth, RØMER Chain establishes itself as a platform for sustainable blockchain computation with unique stability across market cycles. This stability, combined with predictable costs and clear economic signals, positions RØMER to support the next generation of blockchain applications and enterprise adoption.
+Through its focus on actual trading activity and market maker performance, RØMER Chain establishes itself as purpose-built infrastructure for professional market making. This focus, combined with our unique economic model, positions RØMER to become the preferred platform for serious market makers seeking sustainable, protected regional operations.
