--- a/website/market-makers/index.qmd
+++ b/website/market-makers/index.qmd
@@ -1,72 +1,130 @@
-# Market Makers: Help Build Your Future Infrastructure
+# Market Maker Engagement Program: Shape the Future of Trading Infrastructure
 
-As market makers, your edge comes from deep understanding of local markets and the ability to react quickly to opportunities. But this advantage is constantly under threat from global firms using cloud infrastructure to compete in your region. Rømer Chain is building the first blockchain infrastructure that protects and enhances your regional advantage.
+## A Different Approach to Blockchain Development
 
-## Development Roadmap
+Most blockchain projects start with technology and try to find users later. We're taking the opposite approach: starting with market makers' needs and building technology to serve them. Before writing significant code, we want to deeply understand how market makers actually operate and what they truly need from their infrastructure.
 
-### Devnet 1: Protecting Regional Advantages
-Our first development phase focuses on the foundation of regional market making: ensuring validators are physically present in their operating regions. This creates natural geographic advantages that cloud providers cannot replicate, protecting local market makers from global firms attempting to compete in multiple regions simultaneously.
+## Why Engage With Us Now?
 
-Think of this as building the secure foundation that protects your regional trading advantage. When you operate a Rømer validator, you gain natural latency advantages that distant competitors cannot overcome, regardless of their technical resources.
+We understand that as an early-stage project, we're asking for your valuable time. In return, we're offering something unique: the opportunity to shape critical infrastructure from the ground up, backed by meaningful economic participation in the project's future.
 
-Current Status: We are implementing and testing our core validator infrastructure with built-in geographic protections.
+### What We're Offering
 
-### Devnet 2: Building Your Trading Infrastructure
-The second phase focuses on integrating professional trading capabilities directly into validator nodes. We're starting with the most critical component: comprehensive multi-signature functionality that mirrors how trading firms actually operate.
+For market makers who participate in our initial research and development phase:
 
-Key Features Under Development:
+1. Priority Access Agreement
+   - Guaranteed validator slot reservations in your preferred regions
+   - Early access to all testing phases
+   - Direct influence over feature prioritization
+   - Premium support during launch phases
 
-- Role-based access control for trading operations
-- Configurable approval thresholds based on trade size
-- Time-locked transaction scheduling
-- Emergency shutdown capabilities
-- Audit trail and compliance reporting
+2. Economic Participation Rights
+   - Right of first refusal on SAFE investment rounds
+   - Preferential terms for early backers
+   - Validator reward multipliers during initial network phases
+   - Reserved allocation in token distribution events
 
-We Need Your Input: This is where you come in. We want to build infrastructure that serves your actual needs. We're seeking conversations with market makers to understand:
+3. Strategic Partnership Benefits
+   - Direct access to our technical team
+   - Custom feature development consideration
+   - Priority integration support
+   - Co-marketing opportunities
 
-1. Your current operational workflows
-2. Risk management requirements
-3. Integration needs with existing systems
-4. Regulatory compliance considerations
-5. Feature prioritization for future development
+## Streamlined Engagement Process
 
-## Early Engagement Program
+We value your time and have designed our engagement process to be efficient and flexible:
 
-While we're not in a position to offer financial compensation for your time, we are offering a meaningful allocation of Rømer tokens to market makers who help shape the protocol during this critical phase.
+### Initial Meeting (30 minutes)
+A focused introduction where you can:
 
-Partnership Benefits:
+- Learn about Rømer Chain's vision
+- Ask questions about our approach
+- Evaluate potential alignment
+- Decide if further engagement makes sense
 
-- Direct influence on protocol development
-- Early access to validator software
-- Reserved validator slots in your region
-- Token allocation for participation
-- Priority technical support
+If you see value in continuing the conversation, we move to:
 
-Commitment Required:
+### Product Requirements Sessions (2 x 60 minutes)
+Two focused sessions to understand:
 
-- 2-3 hours of interviews over 6 months
-- Feedback on proposed features
-- Review of technical specifications
-- Testing of beta implementations
-- Input on regional market requirements
+- Your operational workflows
+- Technical requirements
+- Integration needs
+- Feature priorities
 
-## Why Engage Now?
+These sessions are scheduled at your convenience and can be spread over several weeks to accommodate your schedule.
 
-The blockchain industry has built plenty of infrastructure for developers, but very little specifically for market makers. This is your opportunity to help create tooling that serves your actual needs. By engaging early, you can ensure that Rømer Chain develops features that:
+## What We're Seeking to Understand
 
-1. Match your operational requirements
-2. Integrate with your existing systems
-3. Address your regulatory constraints
-4. Solve real problems you face daily
-5. Protect your regional advantages
+Through our conversations, we aim to learn about:
+
+1. Real Operational Challenges
+   - Current infrastructure pain points
+   - Risk management requirements
+   - Integration bottlenecks
+   - Regulatory compliance needs
+
+2. Technical Requirements
+   - Trading system architecture
+   - Order management workflows
+   - Market data requirements
+   - Integration preferences
+
+3. Business Operations
+   - Regional market dynamics
+   - Liquidity management strategies
+   - Cross-venue operations
+   - Risk mitigation approaches
+
+## Flexibility in Engagement
+
+We understand that different organizations have different requirements for information sharing and confidentiality. Our engagement process can be tailored to your needs:
+
+- Optional mutual NDA available if desired
+- Flexible meeting scheduling
+- Remote or in-person sessions
+- Adjustable scope of technical discussion
+
+## Why This Approach Matters
+
+The blockchain industry has largely ignored the specific needs of market makers, instead forcing you to adapt to infrastructure designed for other purposes. By starting with your requirements and building specifically for market makers, we can create something fundamentally different: infrastructure that works the way you do.
+
+## The Process
+
+1. Initial Discussion (30 minutes)
+   - Introduction to Rømer Chain
+   - Q&A session
+   - Evaluation of potential collaboration
+   - Decision on further engagement
+
+2. Technical Deep Dive (If proceeding)
+   - Two 60-minute product requirements sessions
+   - Review of your technical needs
+   - Feature prioritization discussion
+   - Integration requirements analysis
+
+3. Ongoing Relationship
+   - Regular updates on development
+   - Early access to prototypes
+   - Continued input opportunities
+   - Strategic partnership development
 
 ## Next Steps
 
-If you're interested in shaping the future of market making infrastructure:
+If you're interested in learning more:
 
-1. Fill out our [Market Maker Interest Form]()
-2. Schedule an initial discussion with our team
-3. Review our technical documentation
-4. Start providing input on feature priorities
+1. Schedule an initial 30-minute conversation
+2. Review our preliminary technical vision
+3. Decide on engagement structure
+4. Begin the collaborative process
 
-The future of market making is regional, and we're building the infrastructure to make that future possible. Join us in creating a system that serves the actual needs of market makers while protecting the advantages that come from local market expertise.
+Contact Justin on Telegram @Hariseldon23 to schedule your initial discussion.
+
+## Available Documentation
+
+For interested parties, we provide appropriate documentation based on engagement level and requirements:
+
+- [Technical architecture overview](../technical/index.qmd)
+- [Economic model analysis](../economics/model.qmd)
+- [Partnership framework](../market-makers/partner-framework.qmd)
+- [Development roadmap](../technical/devnet.qmd)
