--- a/website/pitch/index.qmd
+++ b/website/pitch/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Rømer Chain"
-subtitle: "Building the First Physically Decentralized Layer 1"
+subtitle: "The Layer 1 Built for Market Makers"
 format:
   revealjs:
     theme: simple
@@ -39,132 +39,126 @@ format:
     incremental: true
 ---
 
-## Vision: The Future of Blockchain Infrastructure
+## Vision: Purpose-Built Infrastructure for Market Makers
 
-Rømer Chain represents a fundamental reimagining of blockchain architecture. By combining Austrian economics, physical decentralization, and innovative consensus mechanisms, we're creating the first blockchain explicitly designed to thrive during bear markets - precisely when other chains are most vulnerable.
+Rømer Chain reimagines blockchain infrastructure by putting market makers at the center of system design. Through specialized architecture and geographic validation, we create natural regional advantages that protect local market makers while ensuring true physical decentralization.
 
 ::: {.incremental}
-- First blockchain built on physical reality rather than virtual consensus
-- True geographic decentralization across 80+ strategic network locations
-- Austrian economic principles that naturally strengthen the network during market downturns
-- Fixed computation costs enabling enterprise-grade stability
+- First blockchain optimized specifically for market making operations
+- Native [FIX protocol](https://en.wikipedia.org/wiki/Financial_Information_eXchange) support for seamless infrastructure integration
+- Protected regional markets through physical network topology
+- Superior performance through advanced consensus mechanisms
 :::
 
 ---
 
-## Market Opportunity
+## Market Making Challenges
 
-The blockchain industry faces critical challenges that create an opening for innovation:
-
-::: {.incremental}
-- $100B+ lost in 2022 bear market due to unstable tokenomics
-- 90% of Ethereum nodes run on just 3 cloud providers
-- Average validator costs exceed $50,000 on major chains
-- Computation costs vary by 1000%+ during market cycles
-:::
-
-These systemic weaknesses create an opportunity for a fundamentally new approach.
-
----
-
-## The Problem
-
-Current blockchain architectures face five fundamental challenges:
+Current blockchain infrastructure forces market makers to adapt to systems not designed for their needs:
 
 ::: {.incremental}
-- **Market Cycle Vulnerability**: Bear markets devastate development and security
-- **Geographic Centralization**: Most nodes run in the same data centers
-- **High Validator Barriers**: Massive financial requirements limit participation
-- **Unstable Computation Costs**: Unpredictable pricing blocks enterprise adoption
-- **MEV as Market Distortion**: Front-running undermines market integrity
+- Front-running and MEV extraction eat into profits
+- No ability to gain sustained regional advantages
+- Complex integration with existing trading systems
+- Unpredictable transaction ordering undermines strategies
+- High infrastructure costs across multiple venues
 :::
 
 ---
 
-## The Rømer Solution
+## The RØMER Solution
 
-Four core innovations solve these fundamental challenges:
+Four core innovations create unprecedented advantages for market makers:
 
 :::: {.columns}
 
 ::: {.column width="25%"}
-**Counter-Cyclical Economics**
+**Superior Performance**
 
-- Supply contracts in bear markets
-- Token value naturally rises
-- Development continues unimpeded
+- 2-hop block acceptance
+- 3-hop finality
+- Outperforms dYdX, Sei, Injective
 :::
 
 ::: {.column width="25%"}
-**Geographic Distribution**
+**Regional Protection**
 
-- Physical infrastructure requirements
-- Multi-jurisdictional resilience
-- Natural DDoS protection
+- Geographic validation
+- Local market advantages
+- Natural MEV protection
 :::
 
 ::: {.column width="25%"}
-**Proof of Physics**
+**Infrastructure Integration**
 
-- Performance-based validation
-- Minimal financial barriers
-- True decentralization
+- Native FIX support
+- Direct system connection
+- Unified trading stack
 :::
 
 ::: {.column width="25%"}
-**Sui Move VM**
+**Market Economics**
 
-- Upfront compute costs
-- No gas refunds for reverts
-- Prevents MEV spam attacks
-- Granular resource tracking
+- Dual revenue streams
+- Protected regional flow
+- Capital efficiency
 :::
 
 ::::
 
 ---
 
-## Our Competitive Edge
+## Technical Edge: Market Maker VM
 
-Why Rømer Chain represents a step-function improvement:
+Our specialized Move VM creates native advantages for market makers:
+
+::: {.incremental}
+- Complex order types built directly into VM
+- Native FIX protocol message handling
+- Built-in position management and risk controls
+- Automated inventory management primitives
+- Cross-venue arbitrage optimization
+:::
+
+---
+
+## Performance Advantage
+
+Why Rømer Chain significantly outperforms existing trading chains:
 
 :::: {.columns}
 
 ::: {.column width="50%"}
-**Traditional Chains**
+**Current Trading Chains**
 
-- Vulnerable to bear markets
-- Centralized in data centers
-- High financial barriers
-- Volatile compute costs
-- MEV extraction issues
+- dYdX: 4-6 hops for finality
+- Sei: Complex parallel execution
+- Injective: Modified EVM limitations
 :::
 
 ::: {.column width="50%"}
 **Rømer Chain**
 
-- Thrives in bear markets
-- True physical distribution
-- Minimal financial barriers
-- Fixed compute costs
-- Natural MEV protection
+- 2-hop block acceptance
+- 3-hop finality
+- Hardware optimization
 :::
 
 ::::
 
 ---
 
-## Technical Innovation
+## Infrastructure Integration
 
-Our architecture leverages three major components:
+Validator nodes replace multiple pieces of trading infrastructure:
 
 ::: {.incremental}
-- **Commonware Primitives**: Sub-second finality through Simplex consensus
-- **Proof of Physics**: Geographic validation through network performance
-- **Sui Integration**: Precise computation cost tracking via Move
+- Native FIX protocol connectivity
+- Direct market data integration
+- Built-in risk management
+- Position monitoring systems
+- Cross-venue operations
 :::
-
-Each component reinforces our core advantages while maintaining simplicity.
 
 ---
 
@@ -173,57 +167,52 @@ Each component reinforces our core advantages while maintaining simplicity.
 :::: {.columns}
 
 ::: {.column width="25%"}
-**Phase 1: Q2-Q3 2025**
+**Phase 1: Q1 2025**
 
-- Core network bootstrap
-- Economic engine implementation
-- Initial devnet deployment
+- Market Making Program
+- Devnet1 release
+- FIX block transactions
 :::
 
 ::: {.column width="25%"}
-**Phase 2: Q3-Q4 2025**
+**Phase 2: Q2 2025**
 
-- Network coordination system
-- Performance measurement
-- Geographic proof prototype
+- TBD
 :::
 
 ::: {.column width="25%"}
-**Phase 3: Q4 2025 - Q1 2026**
+**Phase 3: Q3 2025**
 
-- Multi-validator expansion
-- Geographic distribution
-- Production infrastructure
+- TBD
 :::
 
 ::: {.column width="25%"}
-**Phase 4: Q2 2026**
+**Phase 4: Q4 2025**
 
-- Sui integration completion
-- Mainnet preparation
-- Security audits & testing
+- TBD
 :::
 
 ::::
 
 ---
 
-## Current Status & Next Steps
+## Current Status & Market Maker Program
 
 Development Progress:
 
 ::: {.incremental}
-- Core consensus mechanism implementation underway
-- Economic model fully specified
-- Geographic distribution system designed
+- Core consensus mechanism implemented
+- FIX protocol integration designed
+- Geographic system prototyped
 :::
 
-Immediate Focus:
+Market Maker Benefits:
 
 ::: {.incremental}
-- Commonware integration development
-- Angel investment outreach
-- Community building initiation
+- Early access to regional markets
+- Input on feature prioritization
+- Preferential economic terms
+- Strategic partnership opportunities
 :::
 
 ---
@@ -232,75 +221,73 @@ Immediate Focus:
 
 **Founder & CEO**
 
-Experienced blockchain founder and technical leader:
+Experienced market infrastructure builder:
 
-- Successfully scaled Pangolin DEX to nearly $500M TVL
-- Managed over $18B in total trading volume
-- Expanded operations across 4 blockchain networks
-- Previous successful exit from Microsoft Dynamics payroll solution
-- Economics degree providing foundation for tokenomics design
+- Successfully scaled Pangolin DEX to $500M TVL
+- Managed over $18B in trading volume
+- Built systems across 4 networks
+- Previous exit from enterprise software
+- Deep understanding of market maker needs
 
 ---
 
 ## Investment Opportunity
 
-Seeking angel investment to:
-
-::: {.incremental}
-- Accelerate core development
-- Build strategic partnerships
-- Expand technical team
-- Launch initial testnet
-:::
-
 Perfect timing to:
 
 ::: {.incremental}
-- Capitalize on bear market building opportunity
-- Position for next market cycle
-- Establish first-mover advantage in physical blockchain infrastructure
+- Secure strategic regional positions
+- Shape core feature development
+- Participate in initial testing
+- Establish market making advantages
+:::
+
+Seeking strategic partners to:
+
+::: {.incremental}
+- Validate market maker features
+- Guide infrastructure development
+- Define integration requirements
+- Build regional presence
 :::
 
 ---
 
 ## Why Now?
 
-The market desperately needs a blockchain that:
+Market makers need infrastructure that:
 
 ::: {.incremental}
-- Provides genuine geographic decentralization
-- Implements sound Austrian economics
-- Offers predictable computation costs
-- Eliminates financial barriers to validation
-- Creates natural resistance to centralization
+- Provides genuine regional advantages
+- Integrates seamlessly with existing systems
+- Delivers superior performance
+- Protects against MEV extraction
+- Creates sustainable economics
 :::
 
-The time is perfect to build the infrastructure for the next generation of blockchain adoption.
+The time is perfect to build the first blockchain infrastructure designed specifically for market makers.
 
 ---
 
 ## Long-Term Vision
 
-Building the foundation for truly sustainable blockchain infrastructure:
+Building the foundation for professional market making:
 
 ::: {.incremental}
-- **Network Sustainability**
-
-  - Geographic resilience
-  - Economic stability
-  - Permissionless validation
+- **Market Making Excellence**
+  - Protected regional markets
+  - Advanced trading capabilities
+  - Seamless infrastructure integration
 
 - **Technical Innovation**
+  - Continuous performance optimization
+  - Enhanced FIX protocol support
+  - Advanced risk management features
 
-  - Advanced privacy features
-  - MEV protection systems
-  - Continued geographic expansion
-
-- **Market Impact**
-
-  - Enterprise-grade stability
-  - True decentralization
-  - Sound money principles
+- **Economic Sustainability**
+  - Dual revenue streams
+  - Geographic protection
+  - Capital efficiency gains
 :::
 
-Let's build the future of blockchain infrastructure together.
+Join us in transforming blockchain market making.
